# jcmunday.workers.dev

./: README.md
.github/workflows/: ci-test-rust.yml
api/: Cargo.toml  README.md
api/src/: config.rs  lib.rs  startup.rs
api/src/routes/: dev.rs  health.rs  mod.rs  music.rs
api/src/services/discogs/: client.rs  domain.rs  mod.rs  types.rs
api/src/services/waka/: client.rs
api/tests/services/: discogs.rs  helpers.rs  main.rs  waka.rs
me/: .gitignore  Cargo.toml  wrangler.toml
me/src/: config.rs  lib.rs  main.rs  utils.rs
me/src/services/: discogs.rs  mod.rs
me/src/services/discogs/: client.rs  types.rs
me/src/services/waka/: client.rs
me/static/: index.html
