[package]
name = "api"
version = "0.1.0"
authors = ["jcmunday"]
description = "api backend for personal portfolio"
repository = "https://github.com/1602077/jcmunday.workers.dev"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
cfg-if = "1.0.0"
console_error_panic_hook = { version = "0.1.1", optional = true }
json = "0.12.4"
reqwest = { version = "0.11.17", features = ["json"] }
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.163", features = [ "derive", "serde_derive" ] }
serde_derive = "1.0.163"
serde_json = "1.0.96"
worker = "0.0.16"

[dev-dependencies]
claims = "0.7.1"
fake = "2.6.1"
rand = "0.8.5"
tokio = { version = "1", features = [ "rt", "macros"] }
wiremock = "0.5"

[profile.release]
opt-level = "s"
