[package]
name = "me"
version = "0.1.0"
authors = ["jack"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
cfg-if = "1.0.0"
console_error_panic_hook = { version = "0.1.1", optional = true }
json = "0.12.4"
reqwest = { version = "0.11.14", features = ["json"] }
serde = "1.0.152"
serde_derive = "1.0.152"
serde_json = "1.0.93"
worker = "0.0.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
